# hs-id3

./: .gitignore  hs-id3.cabal  stack.yaml
extra/Data/Bits/Lens/: Extra.hs
extra/Data/List/Lens/: Extra.hs
extra/Data/Monoid/: Extra.hs
extra/Data/Text/Encoding/: Lens.hs
extra/GHC/Real/: Lens.hs
lib/Data/ID3/: Build.hs  Builder.hs  Frames.hs  Genre.hs  IO.hs  Parse.hs  ReadWrite.hs  Tag.hs  Version.hs
lib/Data/ID3/V1/: Build.hs  Genre.hs  Instances.hs  Parse.hs  Tag.hs
lib/Data/ID3/V1/Tag/: V10.hs  V11.hs  V12.hs  V1E.hs
lib/Data/ID3/V2/: Encoding.hs  Frames.hs  Header.hs  Synchronisation.hs
test/: .gitignore  Main.hs  V1Suite.hs
test/V1/: Instances.hs  Lenses.hs  Suite.hs
