cabal-version: 3.0
name:          hs-id3
version:       0.1

common common-options
  default-language:   Haskell2010
  default-extensions:
--      NoImplicitPrelude
      OverloadedStrings
    , DerivingStrategies
    , GeneralizedNewtypeDeriving
    , DeriveGeneric
    , DeriveFunctor
    , DeriveDataTypeable
    , DataKinds
    , GADTs
    , KindSignatures
    , FlexibleInstances
    , FlexibleContexts
    , NoMonomorphismRestriction
    , AllowAmbiguousTypes
    , RankNTypes
    , TypeFamilies
    , MultiParamTypeClasses
    , FunctionalDependencies
    , NumericUnderscores
    , BangPatterns
    , LambdaCase
    , RecordWildCards
    , ScopedTypeVariables
    , DuplicateRecordFields
    , TypeApplications
    , TemplateHaskell
  ghc-options:        -Wall
                      -Wno-type-defaults
                      -fwrite-ide-info
                      -hiedir=.hie
  build-depends:      base, relude
  mixins:   base hiding (Prelude)
    , relude (Relude as Prelude)
    , relude

common common-depends
  build-depends:
    -- Data
      text
    , bytestring
    , binary
    , extra
    , lens
    , generic-lens
    -- Trans
    , transformers
    -- Util
    , prettyprinter

library
  import:           common-options, common-depends
  exposed-modules:
      Data.ID3.Parse
    , Data.ID3.Build
    , Data.ID3.Genre
    , Data.ID3.Version
    , Data.ID3.ReadWrite
    , Data.ID3.IO
    , Data.ID3.V1.Tag
    , Data.ID3.V1.Parse
    , Data.ID3.V1.Build
    , Data.ID3.V1.Instances
    , Data.ID3.V2.Encoding
    , Data.ID3.V2.Frames
    , Data.ID3.V2.Synchronisation
    , Data.ID3.V2.Header
    , Data.Monoid.Extra
  other-modules:
  hs-source-dirs:   lib
  build-depends:
    -- Parsing
      megaparsec
    , parser-combinators

test-suite lib
  import:             common-options, common-depends
  main-is:            Main.hs
  other-modules:
    V1Suite
  hs-source-dirs:     test
  type:               exitcode-stdio-1.0
  build-depends:
      hs-id3
    -- Testing
    , tasty
    , tasty-hunit
    , tasty-expected-failure
    -- Download tests
    , tar
    , zlib
    , req
    -- Manage test resources
    , directory
    , path
